# aicode-usage

./: .gitignore  CLAUDE.md  README.md  TESTING.md  docker-compose.yml
.github/: dependabot.yml
backend/: Dockerfile  config.yaml  pyproject.toml
backend/ai_code_usage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: auth_pat.py  config.py  data_schema.py  deps.py  main.py
backend/app/routers/: __init__.py  admin.py  auth.py  health.py  metrics.py  quota.py  tokens.py  v1.py
backend/app/services/: auth.py  clickhouse.py  clickhouse_admin.py  clickhouse_client.py  clickhouse_filters.py  clickhouse_user.py  database.py  ldap_service.py  notification.py  notification_v2.py  template_renderer.py
backend/tests/: conftest.py  test_admin_date_range.py  test_admin_export.py  test_admin_quota_levels.py  test_admin_users.py  test_admin_working_hours.py  test_auth_service.py  test_deps.py  test_health.py  test_metrics.py  test_models.py  test_notification_enhanced.py  test_p0_security.py  test_pat_auth.py  test_pat_tokens.py  test_quota_usage.py  test_us_003.py  test_us_013.py  test_us_014.py  test_us_015.py  test_us_016.py  test_us_017.py  test_us_018.py  test_us_019.py  test_us_020.py  test_us_021.py  test_us_022.py  test_v1_api.py
docs/: clickhouse-token-queries.sql  dba-optimization.sql  pat-dev-tasks.md  po-acceptance-report-r2.md  po-acceptance-report.md  po-uat-report.html  requirements-changelog.md  requirements-mapping.md  requirements-model-pricing.md  requirements-pat-api.md  requirements-quota-email-v2.md  requirements.md  (+1 more)
(+77 files in other folders)
