# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 SubLang International <https://sublang.ai>

[project]
name = "ai-code-usage-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.44.0",
    "pyyaml>=6.0",
    "clickhouse-driver>=0.2",
    "psycopg2-binary>=2.9.11",
    "aiosmtplib>=3.0",
    "ldap3>=2.9",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "apscheduler>=3.10",
    "cachetools>=5.3",
    "watchdog>=6.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.15.11",
    "pytest>=8.0",
    "types-PyYAML",
    "types-cachetools",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
